# Q3_25_Builder_Tommy

./: .gitignore  README.md
Capstone/programs/capstone/: Cargo.toml
Capstone/programs/capstone/src/: constants.rs  errors.rs  lib.rs
Capstone/programs/capstone/src/instructions/: claim_rewards.rs  initialize.rs  mod.rs  token_operations.rs  tuktuk_crank_complete_expedition.rs  tuktuk_crank_create_expedition.rs  tuktuk_crank_distribute_rewards.rs  tuktuk_crank_process_round.rs  tuktuk_crank_start_expedition.rs  user_create_account.rs  user_join_expedition.rs  user_submit_vote.rs
Capstone/programs/capstone/src/state/: expedition.rs  expedition_round.rs  global_game_state.rs  guild_performance.rs  guild_vote.rs  mod.rs  reward_pool.rs  task_queue_config.rs  user_account.rs  user_expedition_participation.rs
Capstone/programs/capstone/src/utils/: calculate_guild_score.rs  distribute_rewards.rs  guild_performance.rs  mod.rs
Capstone/resources/ephemeral-vrf-main/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
Capstone/resources/ephemeral-vrf-main/.github/workflows/: publish-crates-and-sdk.yml  run-tests.yml
Capstone/resources/ephemeral-vrf-main/api/: Cargo.toml
Capstone/resources/ephemeral-vrf-main/api/idl/: idl.json
Capstone/resources/ephemeral-vrf-main/api/src/: consts.rs  error.rs  instruction.rs  lib.rs  loaders.rs  pda.rs  sdk.rs  verify.rs
Capstone/resources/ephemeral-vrf-main/api/src/state/: macros.rs  mod.rs  oracle.rs  oracles.rs  queue.rs
Capstone/resources/ephemeral-vrf-main/deployments/: fly-devnet-grpc.toml  fly-devnet.toml  fly-ephemeral.toml  fly-mainnet-grpc.toml  fly-mainnet.toml
Capstone/resources/ephemeral-vrf-main/program/: Cargo.toml
Capstone/resources/ephemeral-vrf-main/program/src/: close_oracle_queue.rs  delegate_oracle_queue.rs  initialize.rs  initialize_oracle_queue.rs  lib.rs  modify_oracles.rs  process_undelegation.rs  provide_randomness.rs  request_randomness.rs  undelegate_oracle_queue.rs
Capstone/resources/ephemeral-vrf-main/program/tests/: test.rs
Capstone/resources/ephemeral-vrf-main/program/tests/fixtures/: accounts.rs  mod.rs
Capstone/resources/ephemeral-vrf-main/sdk/: Cargo.toml
Capstone/resources/ephemeral-vrf-main/sdk/src/: anchor.rs  instructions.rs
Capstone/resources/ephemeral-vrf-main/sdk/vrf-macro/: Cargo.toml
Capstone/resources/ephemeral-vrf-main/sdk/vrf-macro/src/: lib.rs
Capstone/resources/ephemeral-vrf-main/src/: Cargo.toml  main.rs
Capstone/resources/ephemeral-vrf-main/vrf/: Cargo.toml
Capstone/resources/ephemeral-vrf-main/vrf-cli/: Cargo.toml
Capstone/resources/ephemeral-vrf-main/vrf-cli/src/: main.rs
Capstone/resources/ephemeral-vrf-main/vrf-oracle/: Cargo.toml
Capstone/resources/ephemeral-vrf-main/vrf-oracle/src/: args.rs  main.rs
Capstone/resources/ephemeral-vrf-main/vrf-oracle/src/oracle/: client.rs  mod.rs  processor.rs  sources.rs  utils.rs
Capstone/resources/ephemeral-vrf-main/vrf/src/: consts.rs  lib.rs  vrf.rs
Capstone/resources/tuktuk-main/: .gitignore  Cargo.toml  Procfile  README.md  publish-packages.sh  test-crons.sh  tuktuk-crank-turner.Dockerfile
Capstone/resources/tuktuk-main/.github/actions/buffer-deploy/: action.yaml
Capstone/resources/tuktuk-main/.github/actions/build-anchor/: action.yaml
Capstone/resources/tuktuk-main/.github/actions/build-verified/: action.yaml
Capstone/resources/tuktuk-main/.github/actions/setup/: action.yaml
Capstone/resources/tuktuk-main/.github/actions/setup-anchor/: action.yaml
Capstone/resources/tuktuk-main/.github/actions/setup-ts/: action.yaml
Capstone/resources/tuktuk-main/.github/workflows/: develop-release-program.yaml  docker-push.yaml  npm-canary-release.yaml  npm-publish.yaml  release-program.yaml  solana-programs.yaml  solana-transaction-utils.yaml  tuktuk-cli.yaml  tuktuk-crank-turner.yaml  tuktuk-sdk.yaml
Capstone/resources/tuktuk-main/docsite/: README.md  components.json  package.json  tailwind.config.js
Capstone/resources/tuktuk-main/docsite/scripts/: generate-idl-docs.ts
Capstone/resources/tuktuk-main/docsite/src/components/: Callout.jsx  CodeSnippet.jsx  FeaturedCard.jsx  Footer.jsx  HeroGradient.jsx  Layout.jsx  MobileNavigation.jsx  Navigation.jsx  Prose.jsx  Search.jsx  TukTukAnimation.jsx
Capstone/resources/tuktuk-main/solana-programs/: Anchor.toml  CHANGELOG.md  Cargo.toml  docker-info.json  package.json  tsconfig.json
Capstone/resources/tuktuk-main/solana-programs/tests/: cron.ts  tuktuk.ts  utils.ts
Capstone/resources/tuktuk-main/solana-transaction-utils/: Cargo.toml
Capstone/resources/tuktuk-main/solana-transaction-utils/src/: blockhash_watcher.rs  error.rs  lib.rs  pack.rs  priority_fee.rs  queue.rs  send_and_confirm_transactions_in_parallel.rs  sender.rs  sync.rs
Capstone/resources/tuktuk-main/tuktuk-cli/: Cargo.toml
Capstone/resources/tuktuk-main/tuktuk-cli/src/: README.md  client.rs  lib.rs  main.rs  serde.rs
Capstone/resources/tuktuk-main/tuktuk-crank-turner/: Cargo.toml
Capstone/resources/tuktuk-main/tuktuk-crank-turner/src/: main.rs  metrics.rs  profitability.rs  settings.rs  sync.rs  task_completion_processor.rs  task_context.rs  task_processor.rs  task_queue.rs  transaction.rs
Capstone/resources/tuktuk-main/tuktuk-program/: Cargo.toml
Capstone/resources/tuktuk-main/tuktuk-program/idls/: cron.json  tuktuk.json
Capstone/resources/tuktuk-main/tuktuk-program/src/: lib.rs  write_return_tasks.rs
Capstone/resources/tuktuk-main/tuktuk-sdk/: Cargo.toml  build.rs
Capstone/resources/tuktuk-main/tuktuk-sdk/src/: client.rs  clock.rs  compiled_transaction.rs  error.rs  instruction.rs  lib.rs  pubsub_client.rs  tuktuk.rs  watcher.rs
Capstone/resources/tuktuk-main/typescript-examples/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
Capstone/resources/tuktuk-main/typescript-examples/src/: cron-memo.ts  helpers.ts  memo.ts  token-transfer.ts
week-3/nft-marketplace/programs/nft-marketplace/: Cargo.toml
week-3/nft-marketplace/programs/nft-marketplace/src/: lib.rs
week-3/nft-marketplace/programs/nft-marketplace/tests/: test_template.rs
(+192 files in other folders)
