[workspace]
resolver = "2"
members = ["api", "program", "src", "vrf", "vrf-oracle", "vrf-cli", "sdk"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Business Source License 1.1"
authors = ["MagicBlock Labs <dev@magicblock.xyz>"]
homepage = "https://www.magicblock.xyz/"
documentation = "https://docs.magicblock.xyz/"
repository = "https://github.com/magicblock-labs/ephemeral-vrf"
readme = "./README.md"
keywords = ["solana", "vrf", "ephemeral-rollups", "magicblock"]

[workspace.dependencies]
ephemeral-vrf = { path = "./vrf", version = "0.2.0" }
ephemeral-vrf-api = { path = "./api", version = "0.2.0" }
ephemeral-vrf-sdk-vrf-macro = { path = "sdk/vrf-macro", version = "0.2.0" }
ephemeral-rollups-sdk = "0.2.4"
borsh = ">=0.10.1"
bytemuck = "1.14"
num_enum = "0.7"
solana-program = ">=1.18.26"
solana-curve25519 = "=2.1"
solana-program-test = "=2.1"
solana-client = "=2.1"
solana-account-decoder = "=2.1"
curve25519-dalek = { version = "4.1.3", default-features = false }
sha2 = "0.10.8"
hkdf = "0.12.4"
solana-sdk = "=2.1"
steel = "4.0.2"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.7"
anchor-lang = { version = ">=0.28.0" }
helius-laserstream = "0.0.5"
futures-util = "0.3.31"
futures = "0.3.31"
futures-core = "0.3.31"
async-trait = "0.1.88"
crossbeam-channel = "0.5.15"
bincode = "1.3.3"
base64 = "0.22.1"
