[workspace.package]
authors = ["Helium <info@helium.com>"]
license = "Apache-2.0"
edition = "2021"
description = "Tuktuk is a permissionless timed crank system for Solana."
homepage = "https://github.com/helium/tuktuk"
repository = "https://github.com/helium/tuktuk"

[workspace]
resolver = "2"
members = [
  "tuktuk-crank-turner",
  "solana-transaction-utils",
  "tuktuk-sdk",
  "tuktuk-cli",
  "tuktuk-program",
]

[workspace.dependencies]
solana-sdk = "2.2.1"
solana-quic-client = "2.2.3"
solana-program = "2.2.1"
solana-client = "2.2.3"
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1"
bs58 = "0.5"
clap = { version = "4", features = ["derive"] }
config = { version = "0", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0", features = ["serde"] }
tokio = { version = "1", default-features = false, features = [
  "fs",
  "macros",
  "signal",
  "sync",
  "rt-multi-thread",
  "rt",
  "process",
  "time",
] }
tokio-util = "0"
tokio-stream = { version = "0", features = ["fs"] }
# Keep at 0.10 since zeroize breaks for solana and rsa madness
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
futures = "*"
futures-util = "*"
tracing = "0"
tracing-subscriber = { version = "0", default-features = false, features = [
  "env-filter",
  "registry",
  "fmt",
] }
anchor-lang = "0.31.1"
anchor-client = "0.31.1"
spl-associated-token-account = "6.0.0"
spl-token = "4.0.0"
itertools = "0.13"
tokio-graceful-shutdown = "0.15"
solana-transaction-utils = { version = "0.4.2", path = "./solana-transaction-utils" }
tuktuk-sdk = { version = "0.3.6", path = "./tuktuk-sdk" }
tuktuk-program = { version = "0.3.2", path = "./tuktuk-program" }
solana-account-decoder = { version = "2.2.3" }
solana-clock = { version = "2.2.1" }
solana-transaction-status = "2.2.3"
bincode = { version = "1.3.3" }

[profile.release]
debug = true
