[package]
name = "ephemeral-vrf-api"
description = "API for interacting with the EphemeralVrf program"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[features]
no-entrypoint = []
unit_test_config = []


[dependencies]
bytemuck.workspace = true
ephemeral-rollups-sdk.workspace = true
solana-program.workspace = true
steel.workspace = true
solana-curve25519.workspace = true
curve25519-dalek.workspace = true
borsh.workspace = true
bincode.workspace = true
num_enum.workspace = true