[package]
name = "solana-transaction-utils"
version = "0.4.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Utilities for creating and sending transactions on Solana"

[lib]
name = "solana_transaction_utils"
path = "src/lib.rs"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
tokio = { workspace = true }
futures-core = "0.3.30"
futures = "0.3.30"
bincode = "1.3.3"
solana-transaction-status = { workspace = true }
solana-quic-client = { workspace = true }
solana-rpc-client = { version = "2.2.1", features = ["spinner"] }
itertools = { workspace = true }
thiserror = "1"
dashmap = "5.5.3"
futures-util = "0.3.30"
solana-rpc-client-api = { version = "2.2.3" }
solana-tpu-client = { version = "2.2.3" }
indicatif = "0.17.11"
tokio-graceful-shutdown = { workspace = true }
tracing = { workspace = true }

[features]
default = []
