[package]
name = "tuktuk-cli"
version = "0.2.12"
description = "A cli for tuktuk"
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true


[[bin]]
name = "tuktuk"
path = "src/main.rs"
doc = false

[dependencies]
bincode = "1.3.3"
thiserror = "1"
anchor-lang = { workspace = true }
solana-quic-client = { workspace = true }
solana-client = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anchor-client = { workspace = true, features = ["async"] }
solana-sdk = { workspace = true }
dirs = "5.0.1"
tuktuk-sdk = { workspace = true }
tuktuk-program = { workspace = true }
solana-transaction-utils = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
solana-program = { workspace = true }
itertools = { workspace = true }
bs58 = "0.5.1"
futures = { workspace = true }
