[package]
name = "tuktuk-crank-turner"
version = "0.2.24"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A program for cranking and turning tuktuk tasks"

[[bin]]
name = "tuktuk-crank-turner"
path = "src/main.rs" 

[dependencies]
anchor-lang = { workspace = true }
anchor-client = { workspace = true, features = ["async"] }
bincode = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
solana-client = { workspace = true }
anyhow = { workspace = true }
futures-core = "0.3.30"
futures = "0.3.30"
clap = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = "5.0.2"
solana-transaction-status = { workspace = true }
solana-transaction-utils = { workspace = true }
tuktuk-sdk = { workspace = true }
tuktuk-program = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-graceful-shutdown = { workspace = true }
itertools = { workspace = true }
prometheus = "0.13.4"
lru = "0.13.0"
lazy_static = "1.5.0"
warp = "0.3.3"
rand = "0.9"

[features]
default=[]
