[package]
name = "tuktuk-sdk"
version = "0.3.6"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Rust sdk for interacting with the tuktuk program"

build = "build.rs"

[lib]
name = "tuktuk_sdk"
path = "src/lib.rs"

[dependencies]
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
thiserror = "1"
serde = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { version = "2.2.3" }
solana-clock = { workspace = true }
futures-core = { version = "0.3.30" }
futures = { version = "0.3.30" }
tokio = { workspace = true }
tokio-graceful-shutdown = { workspace = true }
bincode = { workspace = true }
itertools = { workspace = true }
async-trait = { version = "0" }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
tuktuk-program = { workspace = true }
base64 = "0.22.1"
serde_json = "1.0.135"
bytemuck = "1.21.0"
rand = "0.9"
# For pubsub client
futures-util = { version = "0.3.31" }
log = "0.4.20"
solana-rpc-client-api = { version = "2.2.3" }
solana-pubkey = { version = "2.2.1" }
tokio-stream = { version = "0.1.16" }
solana-signature = { version = "2.2.1" }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"] }
url = { version = "2.4.1" }
solana-account-decoder-client-types = { version = "2.2.3" }
semver = { version = "1.0.26" }
tracing = { workspace = true }

[features]
default = []
