[package]
name = "cron"
version = "0.2.5"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cron"

[features]
default = []
devnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
solana-zk-sdk = { workspace = true }

# tuktuk-program = { path = "../../../tuktuk-program" }
# Need to use this for build-verify to work. Use above for debug before pushing
tuktuk-program = { git = "https://github.com/helium/tuktuk.git", rev = "112afe5e80aff8199c3b779203b76b35d97c42d1" }
clockwork-cron = "2.0.19"
chrono = "0.4.39"

